ant4c (YYYY.MM)
  * Functions from the path unit allowed to operate with empty paths.
    Function 'combine' can be used for normalizing path.
  * Increased list of symbols to trim from string at string::trim
    function.
  * Replaced script hash functions 'blake2b-160', 'blake2b-256', 'blake2b-384'
    and 'blake2b-512' with 'blake2b';
    'blake3-256' with 'blake3';
    'keccak-224', keccak-256', 'keccak-384' and 'keccak-512' with 'keccak';
    'sha3-224', sha3-256', 'sha3-384' and 'sha3-512' with 'sha3'.
  * Added support of 'blake3' and 'keccak' algorithms at the script
    function 'file::get-checksum'.
  * Added argument for configure algorithm - byte order, hash length,
    to the 'file::get-checksum' function.
  * Added possibility use external events listener.
  * Added 'loadtasks' task.

-- TheVice <TheVice>  DAY, DD MM YYYY HH:MM:SS +/-..

ant4c (2020.05)

  * Attempt to set value for read only property will not fail
    evaluation of script.
  * Fixed enumeration of target dependencies if space or/and tabs
    was used between names.
  * Fixed enumeration of strings with non ASCII chars at 'for_each' task.
  * WIN32: fixed print of non ASCII chars at the terminal.

 -- TheVice <TheVice>  Sun, 24 May 2020 05:29:35 +0300

ant4c (2020.04)

  * Added support of UTF8 encoding at the string unit.
  * Added new tasks 'attrib', 'call', 'choose', 'copy',
    'delete', 'description', 'fail', 'foreach', 'if',
    'loadfile', 'mkdir', 'move', 'program', 'property',
    'sleep', 'touch' and 'trycatch' to early exists 'echo' and 'exec'.
  * Added hash unit with 'crc32', 'BLAKE2b', 'BLAKE3',
    'SHA3/Keccak' algorithms. Algorithms 'crc32' and 'BLAKE2b'
    also available for 'file::get-checksum' script function.
  * Tag elements 'project' and 'target' internally also marked as tasks.

 -- TheVice <TheVice>  Mon, 27 Apr 2020 05:26:22 +0300

ant4c (2019.10.21)

  * Available tasks 'echo', 'exec' and 'property'.