@@ -162,6 +162,12 @@ if((1 EQUAL ${pugixml_FOUND}) AND ${GTest_FOUND})
   if(DEFINED PUGIXML_HEADER_ONLY)
     target_compile_definitions(ant4c_tests PRIVATE -DPUGIXML_HEADER_ONLY=${PUGIXML_HEADER_ONLY})
   endif()
+
+  if(("GNU" STREQUAL "${CMAKE_CXX_COMPILER_ID}") AND (NOT MINGW))
+    target_compile_options(pugixml PRIVATE "-fPIE")
+    target_compile_options(GTest::GTest PRIVATE "-fPIE")
+  endif()
+
 # if (MSVC OR MINGW)
 #   add_compile_definitions(tests_exec_app UNICODE _UNICODE)
 #   add_compile_definitions(ant4c_tests UNICODE _UNICODE)
@@ -245,6 +251,12 @@ else()
       if(DEFINED PUGIXML_HEADER_ONLY)
         target_compile_definitions(ant4c_tests PRIVATE -DPUGIXML_HEADER_ONLY=${PUGIXML_HEADER_ONLY})
       endif()
+
+      if(("GNU" STREQUAL "${CMAKE_CXX_COMPILER_ID}") AND (NOT MINGW))
+        target_compile_options(pugixml PRIVATE "-fPIE")
+        target_compile_options(${GTEST_MAIN_LIBRARY} PRIVATE "-fPIE")
+      endif()
+
       message(STATUS "pugixml and GTest was found.")
     endif()
   endif()
