@@ -7,7 +7,8 @@ find_package(Boost COMPONENTS regex)
 add_library(ant4c.regex SHARED
   "${CMAKE_SOURCE_DIR}/regex.cpp"
   "${CMAKE_SOURCE_DIR}/regex.h"
-  "${CMAKE_SOURCE_DIR}/text_encoding.c")
+  "${CMAKE_SOURCE_DIR}/text_encoding.c"
+  "${CMAKE_SOURCE_DIR}/text_encoding.cpp")
 
 if(NOT MSVC)
   set_target_properties(ant4c.regex PROPERTIES CXX_STANDARD 11)
